k8s/ingress.yaml
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: demo-app.example.com
    http:
      paths:
      - backend:
          serviceName: demo-app
          servicePort: 80
